css del contenedor de tareas y de agregar tareas

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                                 <i class="fas fa-trash-alt"></i>
                         </div>
                     </li>
+                    <li id="<?php echo $tarea['id'] ?>" class="tarea">
+                        <p>Diseño del registro</p>
+                        <div class="acciones">
+                                <i class="far fa-check-circle"></i>
+                                <i class="fas fa-trash-alt"></i>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </main>
